correcting effin overlaps

--- a/tt-style.css
+++ b/tt-style.css
@@ -39,7 +39,7 @@
 	border-style: solid;
 	border-bottom-style:none;
 	margin: 0px;
-	border-collapse: collapse; !important
+	border-collapse: collapse !important;
 }
 
 .period-middle-slot{
@@ -48,7 +48,7 @@
 	border-right-style: solid;
 	border-left-style: solid;
 	text-align: center;
-	border-collapse: collapse; !important
+	border-collapse: collapse !important;
 }
 
 .period-last-slot{
@@ -56,14 +56,14 @@
 	border-width: 1.5px;
 	border-style: solid;
 	border-top-style:none;
-	border-collapse: collapse; !important
+	border-collapse: collapse !important;
 }
 
 .period-single-slot {
 	margin: 0px;
 	border-width: 1.5px;
 	border-style: solid;
-	border-collapse: collapse; !important
+	border-collapse: collapse !important;
 }
 
 .period-empty-slot{
@@ -72,7 +72,7 @@
 	border-top-style: dashed;
 	border-left-style: solid;
 	border-right-style: solid;
-	border-collapse: collapse; !important
+	border-collapse: collapse !important;
 }
 
 .period-hours {
@@ -98,17 +98,24 @@ float: left;
   table-layout: fixed;
   border-collapse: collapse;
   margin: 0px;
-  border: 0px;
+  border: none !important;
   padding: 0px;
   width: 100%;
-  height: 20px; !important
+  height: 20px !important;
 }
 
 td{
-  border-collapse: collapse;
   overflow: hidden;
-  white-space: nowrap; !important
-  margin: 0px; !important
-  height: 20px; !important
+  white-space: nowrap !important;
+  margin: 0px !important;
+  height: 20px !important;
   padding: 0px;
+}
+table{
+    border-collapse:collapse;
+}
+table, tr, td{
+    padding:0 !important;
+    margin:0 !important;
+
 }
